fix: fix dashboard content alignments

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -18,8 +18,12 @@
       margin-right: 20px;
 
       h2 {
-        margin-bottom: 10px;
+        margin-bottom: 18px;
         color: $primary-color;
+      }
+
+      h3 {
+        margin-bottom: 20px;
       }
 
       p {
@@ -41,7 +45,7 @@
           color: $primary-color;
         }
         p {
-          margin-bottom: 10px;
+          margin-bottom: 20px;
         }
       }
     }
