--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -9,7 +9,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0px 100px;
-    padding: 15px 0;
+    padding: 35px 0px 30px 0px;
   }
 
   .logo {
